fix layout overflow on mobile

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -14,6 +14,7 @@
 
 .hero__social-links {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   margin-top: 2rem;
   text-transform: uppercase;
@@ -21,6 +22,7 @@
 
 .hero__social-links > li {
   margin-right: 2rem;
+  margin-top: 1rem;
 }
 
 .hero__skip-link {
